made get api for variant

--- a/todo
+++ b/todo
@@ -1,8 +1,2 @@
-- make options api backend
-
-- make options api frontend
-- make variant api backend
-
-- rework frontend get products to remove variant and options
-
-- make variant api frontend
+- get variant options
+- make add variant form
