made ui tabs for order status

--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
 - make an admin dashboard for the order
-- change order field to handle stripe
+- get order by user id
+- make user ui order based on order status
