made ui request for frontend cancel and refund order

--- a/todo
+++ b/todo
@@ -1,2 +1,5 @@
 - make order details on admin
+- make the frontend for cancellation
+- make online cancellation feature for processing and paid online
+- make online cancellation feature for offline
 - make refund feature
