finalized landing page

--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
-- make order details on admin
-- make users table
-- make admin dashboard
-- cleanup ui
+- add shop to ur top categories
+- choose by brand
+- add search bar functionality
+- add skeleton on loading
+- when user click swap image
