--- a/todo
+++ b/todo
@@ -1,5 +1,3 @@
-- add shop to ur top categories
-- choose by brand
 - add search bar functionality
-- add skeleton on loading
-- when user click swap image
+- admin dashboard
+- fix seed data
